Fix #353: descenders in scatterplot x-axis label are truncated (#363)

--- a/mlflow/server/js/src/components/CompareRunScatter.css
+++ b/mlflow/server/js/src/components/CompareRunScatter.css
@@ -38,3 +38,7 @@
 .recharts-responsive-container {
   padding-bottom: 10px;
 }
+
+.recharts-responsive-container svg {
+  overflow: visible;
+}
